--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,39 @@
+* {
+  position: relative; }
+
 body {
   background-color: #FAFAFA;
-  font-family: "helvetica"; }
+  font-family: "helvetica";
+  margin: 0px;
+  padding: 0px;
+  padding-top: 5rem; }
+
+header {
+  width: 100%;
+  height: 3rem;
+  position: fixed;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+  top: 0px;
+  left: 0px; }
+  header input {
+    border: none;
+    box-shadow: 1px 1px 7px #EEE;
+    width: 80%;
+    margin-left: 10%;
+    font-size: 1.3rem;
+    border-radius: 3px;
+    height: 2.5rem;
+    padding-left: 1rem;
+    outline: none;
+    transition: all .3s; }
+    header input:hover {
+      box-shadow: 1px 1px 7px #CCC; }
+  header #result_box {
+    display: none;
+    background-color: #FFF; }
+    header #result_box:hover {
+      display: block;
+      z-index: 9; }
 
 /*# sourceMappingURL=app.css.map */
