Adding A LOT OF UI

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,12 +1,34 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,700);
 * {
-  position: relative; }
+  position: relative;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  z-index: 1; }
 
 body {
-  background-color: #FAFAFA;
+  background-color: #F8F8F8;
   font-family: "helvetica";
   margin: 0px;
   padding: 0px;
   padding-top: 5rem; }
+
+.blur {
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px); }
+
+.overlay {
+  position: fixed;
+  background-color: rgba(40, 40, 40, 0.8);
+  z-index: 99;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  display: none; }
 
 header {
   width: 100%;
@@ -15,7 +37,10 @@ header {
   padding-top: .5rem;
   padding-bottom: .5rem;
   top: 0px;
-  left: 0px; }
+  left: 0px;
+  z-index: 98;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding-bottom: 1rem; }
   header input {
     border: none;
     box-shadow: 1px 1px 7px #EEE;
@@ -35,5 +60,153 @@ header {
     header #result_box:hover {
       display: block;
       z-index: 9; }
+
+.MenuOn {
+  right: 0rem !important;
+  transition: all .5s; }
+
+.nav_btn {
+  position: absolute;
+  right: 40px;
+  border-radius: 3px;
+  top: 10px;
+  font-size: 2rem;
+  cursor: pointer; }
+
+nav {
+  z-index: 100; }
+
+aside {
+  position: fixed;
+  width: 20rem;
+  height: 100%;
+  background-color: #FFF;
+  right: -20rem;
+  top: 0px;
+  box-shadow: 1px 1px 7px #CCC;
+  transition: all .5s; }
+  aside .menu_btn {
+    position: relative;
+    text-align: center;
+    width: 100%;
+    height: 5rem;
+    padding-top: 2rem;
+    color: #B0BEC5;
+    font-family: 'Roboto', sans-serif;
+    transition: all .3s;
+    cursor: pointer; }
+    aside .menu_btn:hover {
+      background-color: #FAFAFA; }
+
+.post {
+  position: relative;
+  width: 24%;
+  margin-left: 0.5%;
+  margin-right: 0.5%;
+  margin-bottom: 5rem;
+  height: auto;
+  border-radius: 3px;
+  box-shadow: 0 0 4px 4px #EEE;
+  background-color: white;
+  color: #333;
+  padding-bottom: 10px;
+  display: inline-block; }
+
+.post .header img {
+  position: inherit;
+  border-radius: 3px;
+  width: 90%;
+  margin-left: 5%;
+  top: -40px;
+  box-shadow: 0 0 10px 4px #aaa; }
+
+.post .data {
+  position: inherit;
+  font-size: 13px;
+  color: #aaa;
+  top: -20px;
+  padding-left: 50px;
+  padding-right: 50px; }
+
+.post .data .category {
+  float: right; }
+
+.post .data .date {
+  float: left; }
+
+.post .content_in {
+  position: inherit;
+  font-size: 15px;
+  font-family: helvetica, sans-serif;
+  display: inline-block; }
+
+.post .content .content {
+  width: 80%;
+  padding-left: 20px; }
+
+.post .content .like {
+  width: 19%;
+  text-align: center; }
+
+.post .content_in .like {
+  font-size: 20px;
+  color: #00BCD4; }
+
+.post .actions {
+  text-align: center; }
+
+.space {
+  width: 100%;
+  height: 1px;
+  background-color: #eee;
+  margin-bottom: 1rem;
+  margin-top: 1rem; }
+
+.popup {
+  width: 30%;
+  margin-left: 35%;
+  background-color: #FFF;
+  z-index: 100;
+  max-height: 70%;
+  position: fixed;
+  text-align: center;
+  padding-bottom: 3rem;
+  display: none; }
+  .popup input {
+    border: none;
+    color: #333;
+    width: 80%;
+    margin-top: 3rem;
+    height: 3rem;
+    box-shadow: 0 0 10px 1px #E9E9E9;
+    font-family: 'Roboto', sans-serif;
+    font-size: 2rem;
+    padding-left: 1rem; }
+  .popup input[type=button], .popup input[type=submit] {
+    background-color: rgba(255, 255, 255, 0);
+    color: #499bea;
+    box-shadow: 0 0 0px 0px #E9E9E9;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    cursor: pointer; }
+  .popup .header {
+    width: 90%;
+    height: 7rem;
+    padding-top: 2rem;
+    margin-left: 5%;
+    margin-top: -3rem;
+    background: #499bea;
+    background: -moz-linear-gradient(left, #499bea 0%, #207ce5 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, #499bea), color-stop(100%, #207ce5));
+    background: -webkit-linear-gradient(left, #499bea 0%, #207ce5 100%);
+    background: -o-linear-gradient(left, #499bea 0%, #207ce5 100%);
+    background: -ms-linear-gradient(left, #499bea 0%, #207ce5 100%);
+    background: linear-gradient(to right, #499bea 0%, #207ce5 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#207ce5', GradientType=1 );
+    color: #fff;
+    font-size: 2.5rem;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100; }
 
 /*# sourceMappingURL=app.css.map */
