--- a/dev/scss/app.scss
+++ b/dev/scss/app.scss
@@ -1,9 +1,35 @@
-*{position: relative;}
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,700);
+*{
+	position: relative;
+ 	-webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+	box-sizing: border-box;
+	z-index: 1;
+}
 body{
-	background-color: #FAFAFA;
+	 background-color: #F8F8F8;
     font-family: "helvetica";
     margin: 0px;
     padding: 0px;
     padding-top: 5rem;
 }
+.blur{
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+}
+.overlay{
+	position: fixed;
+	background-color: rgba(40, 40, 40, .8);
+	z-index: 99;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	display: none;
+}
 @import 'header';
+@import 'post';
+@import 'popup';
